# fastapiTemplate

./: Dockerfile  README.md  docker-compose.yaml  poetry_utils.py  pyproject.toml
src/: .env.example  database_config.py  env.py  main.py  models.py
src/alembic/: env.py
src/celery_tasks/: tasks.py
src/env_config/: .env.example  env.py
src/tests/: conftest.py  test_database_config.py  test_main.py
